--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.41 (2024/5/12):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.41.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.41.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.42 (2024/5/12):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.42.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.42.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.42 2024/5/12 <ul> <li>自動アップデート機能のテスト</li> </ul> </li>
 <li>Polaris Engine 1.2.41 2024/5/12 <ul> <li>自動アップデート機能</li> </ul> </li>
 <li>Polaris Engine 1.2.40 2024/5/12 <ul> <li>Fixed the APK automatic build</li> </ul> </li>
 <li>Polaris Engine 1.2.39 2024/5/12 <ul> <li>Fixed the IPA and APK automatic build</li> </ul> </li>
