--- a/web/index.html
+++ b/web/index.html
@@ -171,13 +171,16 @@
 <h2 class="spacer">アプリラインナップ</h2>
 <div class="row align-items-md-center spacer">
 	<div class="col-md">
-		<h2>デスクトップ版 Polaris Engine (Windows, Mac, Linux)</h2>
+		<h2>デスクトップ版 Polaris Engine (Windows, Mac, Chromebook, Linux)</h2>
 		<p>
-			Polaris Engineの開発環境は無料で利用でき、Windows, Mac, Linuxに対応しています。<br>
-			ベースの小説を書いた上で、右クリックして演出を追加すればゲームを作ることができます。<br>
-			さらに、１行ずつ実行できるデバッグ機能や、変数の変化を確認する機能もあります。<br>
-			ゲームのエクスポート機能がついており、ワンクリックでiPhone, Android, Windows, macOS, Web, 家庭用ゲーム機のゲームを出力可能です。<br>
-			Polaris EngineのVLS (Visual Live Scripting) 技術は、GUI編集の便利さとスクリプト記述の効率性の間でバランスを取った、2001年からのソフトウェア工学上の研究成果です。
+			Polaris Engineの開発環境はすべて無料で利用できます。<br>
+			ベースの小説を書いた上で、右クリックして演出を追加すれば、ゲームとして動き始めます。<br>
+			作ったゲームは、「エクスポート機能」を使うことで、ワンクリックでiPhone, Android, Windows, macOS, Web, 家庭用ゲーム機のゲームとして出力できます。<br>
+			さらにデバッグ支援として、1行ずつ目視しながら実行できる機能や、フラグの変化を確認する機能もあります。<br>
+			<br>
+			動作環境はWindowsだけでなく、Macはもちろん、Linuxなど多様なOSでフル機能が利用できます。<br>
+			1万円で買えるPCやChromebookでもPolaris Engineの開発環境を利用できます。<br>
+			これには開発者の「どのような境遇にあっても才能を発揮してほしい」という思いが込められています。<br>
 		</p>
 	</div>
 </div>
@@ -193,22 +196,12 @@
 </div>
 <div class="row align-items-md-center spacer">
 	<div class="col-md">
-		<h2>ブラウザ版 Polaris Engine</h2>
-		<p>
-			Google Chromeブラウザがあれば、デスクトップ版のPolaris Engineと同等の機能が利用できるほか、
-			かつてSuika2 Kiraraにあった視覚的な編集機能も利用可能です。<br>
-			<!-- <a href="/vls/">開発途中のバージョンはこちら</a> (フォルダの入れ子に対応していません) -->
-		</p>
-	</div>
-</div>
-<div class="row align-items-md-center spacer">
-	<div class="col-md">
 		<h2>Windows版ゲーム</h2>
 		<p>
 			Polaris Engineで作ったゲームは、ワンクリックでエクスポートすると、Windows版ゲームになります。
 		</p>
 		<p>
-			Microsoft StoreやSteamでの有償/無償の公開が可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+			Microsoft StoreやSteamでの有償/無償の公開が可能です。
 		</p>
 	</div>
 </div>
@@ -221,7 +214,7 @@
 			iPhoneとiPadだけでなく、日本未発売のApple Vision Proにも対応しています。
 		</p>
 		<p>
-			App Storeでの有償/無償の公開も可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+			App Storeでの有償/無償の公開も可能です。
 		</p>
 	</div>
 </div>
@@ -234,7 +227,7 @@
 			Androidスマホやタブレットだけでなく、ChromebookやAndroid TVにも配信できます。
 		</p>
 		<p>
-			Google Playでの有償/無償の公開も可能です。良心的な価格で公開作業を代行してくださる方を紹介できます。
+			Google Playでの有償/無償の公開も可能です。
 		</p>
 	</div>
 </div>
@@ -266,7 +259,6 @@
 		</p>
 		<p>
 			DMGファイルでの配布のほか、Mac App Storeでの有償/無償での公開も可能です。
-			良心的な価格で公開作業を代行してくださる方を紹介できます。
 		</p>
 	</div>
 </div>
