--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.42 (2024/5/12):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.42.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.42.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.43 (2024/5/17):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.43.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.43.dmg">Mac版 Polaris Engine</a><br>
 <a href="/dl/install-polaris-engine.sh" download>Linux/BSD版 Polaris Engine</a> (Ubuntu, Debian, Fedora, RedHat, FreeBSD)<br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -124,12 +124,12 @@
 
 <h4>謝辞 (Acknowledgements)</h4>
 <p>
-	開発においては、プロ・アマチュアを問わず、才能にあふれる素晴しいクリエイタの皆様にご参加いただいております。すべての貢献者に対して、ここに深謝の意を表します。(順不同・敬称略)
+	開発においては、プロ・アマチュアを問わず、才能にあふれる素晴しいクリエイタの皆様にご参加いただいております。すべての貢献者に対して、ここに深謝の意を表します。(敬称略)
 </p>
 <ul>
 	<li>テンプレートゲーム
 		<ul>
-			<li>ライト|ダーク|ノベル: ゲームクリエイタ / SOrow</li>
+			<li>ライト/ダーク/ノベル: ゲームクリエイタ / SOrow</li>
 			<li>縦書きノベル: ゲームクリエイタ / あさつき</li>
 		</ul>
 	</li>
@@ -159,25 +159,9 @@
 			<li>ゲームクリエイタ / SOrow</li>
 		</ul>
 	</li>
-	<li>デフォルトのアイコン
+	<li>名前入力画面
 		<ul>
-			<li>漫画家 / 龍龍(Ronron) (@RonronAmethyst)</li>
-		</ul>
-	</li>
-	<li>名前入力画面の設計
-		<ul>
-			<li>ゲームクリエイタ / ウビーニ</li>
 			<li>ゲームクリエイタ / あさつき</li>
-		</ul>
-	</li>
-	<li>初期のGUI機能設計とデザイン
-		<ul>
-			<li>デザイナ / MaxMorgan</li>
-		</ul>
-	</li>
-	<li>初期の機能検討とテスト
-		<ul>
-			<li>ゲームクリエイタ / マイマイ</li>
 		</ul>
 	</li>
 </ul>
@@ -435,6 +419,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.43 2024/5/17 <ul> <li>大文字拡張子への警告を追加 (Androidでの混乱を回避)</li> <li>目パチ/口パク画像を使用時にallコマンドでnoneを指定した場合のバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.42 2024/5/12 <ul> <li>自動アップデート機能のテスト</li> </ul> </li>
 <li>Polaris Engine 1.2.41 2024/5/12 <ul> <li>自動アップデート機能</li> </ul> </li>
 <li>Polaris Engine 1.2.40 2024/5/12 <ul> <li>APKの自動ビルドを修正</li> </ul> </li>
