Fixed a video playback bug on Android

--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -378,9 +378,9 @@
 <ul>
 	<li>出力ゲーム
 		<ul>
-			<li>Nintendo Switch</li>
-			<li>PlayStation 4/5</li>
-			<li>Xbox Series X|S</li>
+			<li>Nintendo Switchを想定</li>
+			<li>PlayStation 4/5を想定</li>
+			<li>Xbox Series X|Sを想定</li>
 		</ul>
 	</li>
 	<li>詳細
@@ -390,11 +390,6 @@
 					<li>UnityのC#ソースコードを出力</li>
 					<li>現在はネイティブコードのDLLを併用(.dll/.dylib/.so)</li>
 					<li>直近でC#トランスレータを開発してネイティブコード不要化の計画</li>
-				</ul>
-			</li>
-			<li>ネイティブ版
-				<ul>
-					<li>契約を締結したゲーム機ベンダのローレベルAPIを利用 (非OSS/各ゲーム機ベンダからの提供を想定)</li>
 				</ul>
 			</li>
 		</ul>
